# Woracle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
_codeql_build_dir/: woracle
fiveLetterWords/: words.txt
include/: BenchmarkChrono.h  DictionaryReader.h  HelperFunctions.h  PositionalExclusionMap.h  SolutionMatcher.h  WordleSolver.h
src/: BenchmarkChrono.cpp  DictionaryReader.cpp  HelperFunctions.cpp  MainWindow.cpp  MainWindow.h  PositionalExclusionMap.cpp  SolutionMatcher.cpp  WordleSolver.cpp  WordleSolver.h  main.cpp
